--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "http-errors": "^1.8.0",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "pug": "^3.0.0",
     "puppeteer": "^2.0.0"
   },
   "devDependencies": {
