--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "got": "^11.4.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.10",
     "pug": "^3.0.0",
     "puppeteer": "^2.0.0",
     "validator": "^13.1.1"
