--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/jtjin/GUprice#readme",
   "dependencies": {
+    "@node-rs/jieba": "^0.3.0",
     "aws-sdk": "^2.712.0",
     "bcrypt": "^5.0.0",
     "cheerio": "^1.0.0-rc.3",
