--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "mysql": "^2.18.1",
+    "nodejieba": "^2.4.1",
     "nodemailer": "^6.4.10",
     "pug": "^3.0.0",
     "puppeteer": "^2.0.0",
