--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nodemailer": "^6.4.10",
     "pug": "^3.0.0",
     "puppeteer": "^2.0.0",
+    "socket.io": "^2.3.0",
     "validator": "^13.1.1"
   },
   "devDependencies": {
