--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "homepage": "https://github.com/jtjin/GUprice#readme",
   "dependencies": {
     "@google-cloud/vision": "^2.1.1",
-    "@node-rs/jieba": "^0.3.0",
     "aws-sdk": "^2.712.0",
     "bcrypt": "^5.0.0",
     "cheerio": "^1.0.0-rc.3",
@@ -28,11 +27,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "googleapis": "^55.0.0",
     "got": "^11.4.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "mysql": "^2.18.1",
-    "nodejieba": "^2.4.1",
     "nodemailer": "^6.4.10",
     "pug": "^3.0.0",
     "puppeteer": "^2.0.0",
