--- a/package.json
+++ b/package.json
@@ -22,22 +22,23 @@
     "@google-cloud/vision": "^2.1.1",
     "aws-sdk": "^2.712.0",
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "googleapis": "^55.0.0",
     "got": "^11.4.0",
+    "lodash": "^4.17.19",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "mysql": "^2.18.1",
+    "node-cron": "^2.0.3",
     "nodemailer": "^6.4.10",
     "pug": "^3.0.0",
     "puppeteer": "^2.0.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
-    "socket.io": "^2.3.0",
     "validator": "^13.1.1"
   },
   "devDependencies": {
