--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test mocha --exit",
+    "test_windows": "set NODE_ENV=test&&mocha --exit",
     "eslint": "eslint **/*.js",
     "stylelint": "stylelint **/*.css"
   },
@@ -20,8 +21,11 @@
   "homepage": "https://github.com/jtjin/gu-price#readme",
   "dependencies": {
     "@google-cloud/vision": "^2.1.1",
+    "assert": "^2.0.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cheerio": "^1.0.0-rc.3",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
@@ -29,6 +33,7 @@
     "fs": "0.0.1-security",
     "got": "^11.4.0",
     "lodash": "^4.17.19",
+    "mocha": "^8.1.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "node-cron": "^2.0.3",
