--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha --exit",
-    "test_windows": "set NODE_ENV=test&&mocha --exit",
+    "test": "NODE_ENV=test nyc mocha --exit",
+    "test_windows": "set NODE_ENV=test&&nyc --reporter=html mocha --exit",
     "eslint": "eslint **/*.js",
     "stylelint": "stylelint **/*.css"
   },
@@ -48,6 +48,7 @@
     "eslint": "^7.3.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
+    "nyc": "^15.1.0",
     "stylelint": "^13.6.1",
     "stylelint-config-standard": "^20.0.0"
   }
