--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "NODE_ENV=test nyc mocha --exit",
-    "test_windows": "set NODE_ENV=test&&nyc --reporter=html mocha --exit",
+    "test": "NODE_ENV=test nyc mocha --timeout 5000 --exit",
+    "test_windows": "set NODE_ENV=test&&nyc --reporter=html mocha --timeout 5000 --exit",
     "eslint": "eslint **/*.js",
     "stylelint": "stylelint **/*.css"
   },
