--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Dependency directories
+# dependency directories
 node_modules/
 
 # package-lock
@@ -13,6 +13,6 @@ package-lock.json
 # key
 mykey.json
 
-#test
+# unit test report
 coverage/
 .nyc_output/
